--- a/rosmaster/rosmaster.csproj
+++ b/rosmaster/rosmaster.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="main.cs" />
+    <Compile Include="manager.cs" />
     <Compile Include="Master.cs" />
     <Compile Include="Master_API.cs" />
     <Compile Include="Names.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Registrations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReturnStruct.cs" />
     <Compile Include="XmlRpcManager.cs" />
   </ItemGroup>
   <ItemGroup>
