--- a/CompressedImageView/CompressedImageView.csproj
+++ b/CompressedImageView/CompressedImageView.csproj
@@ -147,6 +147,9 @@
   <ItemGroup>
     <Resource Include="righttrigger.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="PSController.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
