--- a/ArmGaugeUC/ArmGaugeUC/ArmGaugeUC.csproj
+++ b/ArmGaugeUC/ArmGaugeUC/ArmGaugeUC.csproj
@@ -52,6 +52,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RosoutDebug.cs" />
     <Page Include="AGUC.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
