--- a/RosoutDebugUC/RosoutDebugUC.csproj
+++ b/RosoutDebugUC/RosoutDebugUC.csproj
@@ -52,12 +52,12 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="rosoutdebug.xaml">
+    <Page Include="RDUC.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="rosoutdebug.xaml.cs">
-      <DependentUpon>rosoutdebug.xaml</DependentUpon>
+    <Compile Include="RDUC.xaml.cs">
+      <DependentUpon>RDUC.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
