--- a/CompressedImageView/CompressedImageView.csproj
+++ b/CompressedImageView/CompressedImageView.csproj
@@ -107,7 +107,7 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ArmGaugeUC\ArmGaugeUC\ArmGaugeUC.csproj">
+    <ProjectReference Include="..\ArmGaugeUC\ArmGaugeUC.csproj">
       <Project>{D8FF8A55-F789-44D5-B1D0-0EF2924F8311}</Project>
       <Name>ArmGaugeUC</Name>
     </ProjectReference>
@@ -118,6 +118,10 @@
     <ProjectReference Include="..\ROS_ImageUtils\ROS_ImageWPF.csproj">
       <Project>{E0E04AFE-E2CF-4A04-A331-76FE05DCC749}</Project>
       <Name>ROS_ImageWPF</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ROS_IMUUtils\ROS_IMUUtil.csproj">
+      <Project>{03154B06-B16C-447C-AEEE-7AD153ACF2B7}</Project>
+      <Name>ROS_IMUUtil</Name>
     </ProjectReference>
     <ProjectReference Include="..\VoltageUC\BattVoltUC.csproj">
       <Project>{4ECB4384-3D98-43F3-9466-B88EC1046AFF}</Project>
