--- a/CompressedImageView/CompressedImageView.csproj
+++ b/CompressedImageView/CompressedImageView.csproj
@@ -75,7 +75,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="XBOX360Controls.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -107,7 +106,7 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ArmGaugeUC\ArmGaugeUC\ArmGaugeUC.csproj">
+    <ProjectReference Include="..\ArmGaugeUC\ArmGaugeUC.csproj">
       <Project>{D8FF8A55-F789-44D5-B1D0-0EF2924F8311}</Project>
       <Name>ArmGaugeUC</Name>
     </ProjectReference>
