--- a/ROS_IMUUtils/ROS_IMUUtil.csproj
+++ b/ROS_IMUUtils/ROS_IMUUtil.csproj
@@ -160,6 +160,12 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Horizon_GroundSky.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Horizon_Background.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
